<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        app:iconSpaceReserved="false"
        app:key="enable_video_uploads"
        app:summary="@string/prefs_camera_video_upload_summary"
        app:title="@string/prefs_camera_video_upload" />
    <ListPreference
        app:dialogTitle="@string/prefs_video_upload_account"
        app:iconSpaceReserved="false"
        app:key="video_uploads_account_name"
        app:negativeButtonText=""
        app:title="@string/prefs_video_upload_account"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="video_uploads_path"
        app:title="@string/prefs_camera_video_upload_path_title" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="video_uploads_source_path"
        app:title="@string/prefs_camera_upload_source_path_title" />
    <ListPreference
        app:defaultValue="NOTHING"
        app:dialogTitle="@string/prefs_camera_upload_behaviour_dialog_title"
        app:iconSpaceReserved="false"
        app:key="video_uploads_behaviour"
        app:negativeButtonText=""
        app:title="@string/prefs_camera_upload_behaviour_title"
        app:useSimpleSummaryProvider="true" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="video_uploads_last_sync"
        app:title="@string/prefs_camera_upload_last_sync_title" />
    <com.owncloud.android.presentation.settings.LargePreferenceCategory
        android:title="@string/prefs_camera_picture_upload_conditions_title"
        app:iconSpaceReserved="false"
        app:summary="@string/prefs_camera_picture_upload_conditions_summary">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="video_uploads_on_wifi"
            app:title="@string/prefs_camera_video_upload_on_wifi" />
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            app:key="video_uploads_on_charging"
            app:title="@string/prefs_camera_video_upload_on_charging" />
    </com.owncloud.android.presentation.settings.LargePreferenceCategory>
</PreferenceScreen>
