<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="more_screen">

    <Preference
        app:iconSpaceReserved="false"
        app:key="help"
        app:title="@string/prefs_help"
        app:isPreferenceVisible="false"/>
    <Preference
        app:iconSpaceReserved="false"
        app:key="syncCalendarContacts"
        app:summary="@string/prefs_sync_calendar_contacts_summary"
        app:title="@string/prefs_sync_calendar_contacts"
        app:isPreferenceVisible="false"/>
    <Preference
        app:iconSpaceReserved="false"
        app:key="accessDocumentProvider"
        app:summary="@string/prefs_access_document_provider_summary"
        app:title="@string/prefs_access_document_provider"
        app:isPreferenceVisible="false"/>
    <Preference
        app:iconSpaceReserved="false"
        app:key="feedback"
        app:title="@string/prefs_send_feedback"
        app:isPreferenceVisible="false"
        />
    <Preference
        app:iconSpaceReserved="false"
        app:key="recommend"
        app:title="@string/prefs_recommend" />
    <Preference
        app:iconSpaceReserved="false"
        app:key="imprint"
        app:title="@string/prefs_imprint" />

</PreferenceScreen>
