<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="security_screen">

    <CheckBoxPreference
        app:iconSpaceReserved="false"
        app:key="set_pincode"
        app:title="@string/prefs_passcode" />
    <CheckBoxPreference
        app:iconSpaceReserved="false"
        app:key="set_pattern"
        app:title="@string/prefs_pattern" />
    <CheckBoxPreference
        app:iconSpaceReserved="false"
        app:key="set_biometric"
        app:title="@string/prefs_biometric" />
    <ListPreference
        app:defaultValue="IMMEDIATELY"
        app:dialogTitle="@string/prefs_lock_application"
        app:iconSpaceReserved="false"
        app:key="lock_timeout"
        app:negativeButtonText=""
        app:title="@string/prefs_lock_application"
        app:useSimpleSummaryProvider="true" />
    <CheckBoxPreference
        app:iconSpaceReserved="false"
        app:key="lock_access_from_document_provider"
        app:summary="@string/prefs_lock_access_from_document_provider_summary"
        app:title="@string/prefs_lock_access_from_document_provider" />
    <CheckBoxPreference
        app:iconSpaceReserved="false"
        app:key="touches_with_other_visible_windows"
        app:summary="@string/prefs_touches_with_other_visible_windows_summary"
        app:title="@string/prefs_touches_with_other_visible_windows" />

</PreferenceScreen>