<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_all_files"
        android:icon="@drawable/ic_folder"
        android:title="@string/bottom_nav_files" />
    <item
        android:id="@+id/nav_shared_by_link_files"
        android:icon="@drawable/ic_shared_by_link"
        android:title="@string/bottom_nav_links" />
    <item
        android:id="@+id/nav_spaces"
        android:icon="@drawable/ic_spaces"
        android:title="@string/bottom_nav_spaces"
        android:visible="false"
        />
    <item
        android:id="@+id/nav_uploads"
        android:icon="@drawable/ic_uploads"
        android:title="@string/bottom_nav_uploads" />
    <item
        android:id="@+id/nav_available_offline_files"
        android:icon="@drawable/ic_available_offline"
        android:title="@string/bottom_nav_offline" />
</menu>
