<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:id="@+id/drawer_menu_settings_etc">
        <item
            android:orderInCategory="3"
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/actionbar_settings" />
        <item
            android:orderInCategory="3"
            android:id="@+id/drawer_menu_feedback"
            android:icon="@drawable/ic_email_grey"
            android:title="@string/drawer_feedback"
            android:visible="false"/>
        <item
            android:orderInCategory="3"
            android:id="@+id/drawer_menu_help"
            android:icon="@drawable/ic_help_circle_grey"
            android:title="@string/drawer_help" />
        <item
            android:orderInCategory="3"
            android:id="@+id/drawer_menu_privacy_policy"
            android:icon="@drawable/ic_privacy_policy"
            android:title="@string/prefs_privacy_policy" />

        <item
            android:id="@+id/footer_spacer_1"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title="" />

        <item
            android:id="@+id/footer_spacer_2"
            android:checkable="false"
            android:enabled="false"
            android:orderInCategory="200"
            android:title="" />
    </group>

</menu>
