<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:longClickable="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/publicLinkName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="@dimen/standard_half_margin"
            android:layout_marginStart="@dimen/standard_half_margin"
            android:layout_marginTop="@dimen/standard_half_margin"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:singleLine="true"
            android:text="@string/username"
            android:textColor="@color/textColor"
            android:textSize="@dimen/two_line_primary_text_size" />

        <ImageButton
            android:id="@+id/getPublicLinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@drawable/copy_link"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description_get_public_link" />

        <ImageButton
            android:id="@+id/deletePublicLinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@drawable/ic_action_delete_grey"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description_delete_public_link" />

        <ImageButton
            android:id="@+id/editPublicLinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@drawable/ic_lead_pencil_grey"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description_get_edit_public_link" />

    </LinearLayout>

</LinearLayout>
