<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:filterTouchesWhenObscured="true"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:longClickable="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/icon"
            android:src="@drawable/ic_user"
            android:layout_marginStart="@dimen/standard_half_margin"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/two_line_primary_text_size"
            android:text="@string/username"
            android:id="@+id/userOrGroupName"
            android:layout_marginTop="@dimen/standard_half_margin"
            android:layout_marginBottom="@dimen/standard_half_margin"
            android:layout_marginStart="@dimen/standard_half_margin"
            android:textColor="@color/textColor"
            android:singleLine="true"
            android:ellipsize="middle"
            android:layout_gravity="center_vertical" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/unshareButton"
            android:src="@drawable/ic_action_delete_grey"
            android:padding="14dp"
            android:scaleType="centerCrop"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description_delete_share" />

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/editShareButton"
            android:src="@drawable/ic_lead_pencil_grey"
            android:padding="14dp"
            android:background="@color/transparent"
            android:contentDescription="@string/content_description_edit_share" />

    </LinearLayout>

</LinearLayout>
